[gd_scene load_steps=26 format=3 uid="uid://cw2kqghoyrwu8"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_0almg"]
[ext_resource type="Texture2D" uid="uid://dmy18ut0iljgj" path="res://Assets/MainBubble.png" id="2_gw5qt"]
[ext_resource type="Texture2D" uid="uid://xinvlvfuqtny" path="res://Assets/BubbleWands/bubblewand_red.png" id="3_osnui"]
[ext_resource type="AudioStream" uid="uid://daxjejafaxotf" path="res://Audio/tone1.ogg" id="3_rqf7a"]
[ext_resource type="Texture2D" uid="uid://5vw0suenm0u3" path="res://Assets/Buttons/BubbleBackHover.png" id="5_dpnj8"]
[ext_resource type="Texture2D" uid="uid://bwiirefp0k8o4" path="res://Assets/BubbleWands/bubblewand_orange.png" id="5_l75be"]
[ext_resource type="Texture2D" uid="uid://cbqxcpqefvxex" path="res://Assets/Buttons/ButtonBack.png" id="6_lyovx"]
[ext_resource type="Texture2D" uid="uid://dnc6el8c5wd7d" path="res://Assets/Upgrades/Bubble Machine.png" id="8_tpp2c"]
[ext_resource type="Texture2D" uid="uid://cdl1uikrqqbmd" path="res://Assets/Upgrades/Extra Hands.png" id="9_lad53"]
[ext_resource type="Texture2D" uid="uid://ow13xqocw72" path="res://Assets/Upgrades/Bubble Factory.png" id="10_k2bwk"]
[ext_resource type="Texture2D" uid="uid://dn5qjfusauneh" path="res://Assets/Upgrades/Baby.png" id="11_s04f8"]
[ext_resource type="Texture2D" uid="uid://cwwuqbdpe1m2p" path="res://Assets/Upgrades/Bubble Garden.png" id="12_sxsqc"]
[ext_resource type="Texture2D" uid="uid://bjvr4invc0uvr" path="res://Assets/wood_floor.jpg" id="13_d1bha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f23hc"]

[sub_resource type="InputEventKey" id="InputEventKey_b5ii3"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_5clax"]
events = [SubResource("InputEventKey_b5ii3")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4a71y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4eaqd"]
texture = ExtResource("6_lyovx")
texture_margin_left = 48.0
texture_margin_top = 12.0
texture_margin_right = 48.0
texture_margin_bottom = 12.0
expand_margin_top = 14.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ayku1"]
texture = ExtResource("6_lyovx")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p80kp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k46kd"]
texture = ExtResource("5_dpnj8")
texture_margin_left = 48.0
texture_margin_right = 48.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uy4nw"]
texture = ExtResource("5_dpnj8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jiq75"]
texture = ExtResource("6_lyovx")
texture_margin_left = 48.0
texture_margin_right = 65.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1nf7k"]
texture = ExtResource("6_lyovx")
texture_margin_left = 48.0
texture_margin_top = 12.0
texture_margin_right = 48.0
texture_margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mcny1"]
texture = ExtResource("13_d1bha")

[node name="UI" type="Control"]
z_index = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0almg")

[node name="BubbleButton" type="Button" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 197.0
offset_top = -121.5
offset_right = 607.0
offset_bottom = 121.5
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f23hc")
shortcut = SubResource("Shortcut_5clax")
icon = ExtResource("2_gw5qt")
flat = true
expand_icon = true

[node name="HealthBar" type="ProgressBar" parent="BubbleButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 17.5
offset_right = -82.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxTexture_4a71y")
max_value = 2.0
step = 1.0
value = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BubbleButton"]
stream = ExtResource("3_rqf7a")

[node name="BubbleCount" type="Label" parent="."]
z_index = 4
layout_mode = 0
offset_left = 31.0
offset_top = 44.0
offset_right = 330.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.0313726, 0.0509804, 0.341176, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_4eaqd")
text = "Bubble Count:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Upgrades" type="VBoxContainer" parent="."]
z_index = 4
custom_minimum_size = Vector2(435, 635)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -439.0
offset_top = 13.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Upgrades"]
z_index = 4
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_ayku1")
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WandButton" type="Button" parent="Upgrades"]
z_index = 4
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p80kp")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "More Bubbles Per Click"
icon = ExtResource("3_osnui")
autowrap_mode = 3

[node name="MachineButton" type="Button" parent="Upgrades"]
z_index = 4
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p80kp")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Passive Bubs"
icon = ExtResource("8_tpp2c")
autowrap_mode = 3

[node name="HandsButton" type="Button" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Extra Hands"
icon = ExtResource("9_lad53")
autowrap_mode = 3

[node name="FactoryButton" type="Button" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Factory"
icon = ExtResource("10_k2bwk")
autowrap_mode = 3

[node name="BabyButton" type="Button" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Babies"
icon = ExtResource("11_s04f8")
autowrap_mode = 3

[node name="GardenButton" type="Button" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Garden"
icon = ExtResource("12_sxsqc")
autowrap_mode = 3

[node name="GangsterButton" type="Button" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.301961, 1)
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k46kd")
theme_override_styles/hover = SubResource("StyleBoxTexture_uy4nw")
theme_override_styles/normal = SubResource("StyleBoxTexture_jiq75")
text = "Gangsters"
icon = ExtResource("5_l75be")
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="TimeLeft" type="Label" parent="Timer"]
anchors_preset = -1
anchor_top = -0.0324074
anchor_right = 0.0512153
anchor_bottom = 0.0524691
offset_left = 30.0
offset_top = 129.0
offset_right = 270.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0.301961, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_1nf7k")
text = "Time Left: X Seconds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Achievement" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -625.0
offset_right = 78.0
offset_bottom = -523.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_mcny1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="BubbleButton" to="." method="_on_bubble_button_mouse_entered"]
[connection signal="mouse_exited" from="BubbleButton" to="." method="_on_bubble_button_mouse_exited"]
[connection signal="pressed" from="BubbleButton" to="." method="_on_bubble_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/WandButton" to="." method="_on_wand_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/WandButton" to="." method="_on_wand_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/WandButton" to="." method="_on_wand_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/MachineButton" to="." method="_on_machine_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/MachineButton" to="." method="_on_machine_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/MachineButton" to="." method="_on_machine_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/HandsButton" to="." method="_on_hands_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/HandsButton" to="." method="_on_hands_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/HandsButton" to="." method="_on_hands_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/FactoryButton" to="." method="_on_factory_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/FactoryButton" to="." method="_on_factory_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/FactoryButton" to="." method="_on_factory_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/BabyButton" to="." method="_on_baby_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/BabyButton" to="." method="_on_baby_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/BabyButton" to="." method="_on_baby_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/GardenButton" to="." method="_on_garden_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/GardenButton" to="." method="_on_garden_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/GardenButton" to="." method="_on_garden_button_pressed"]
[connection signal="mouse_entered" from="Upgrades/GangsterButton" to="." method="_on_gangster_button_mouse_entered"]
[connection signal="mouse_exited" from="Upgrades/GangsterButton" to="." method="_on_gangster_button_mouse_exited"]
[connection signal="pressed" from="Upgrades/GangsterButton" to="." method="_on_gangster_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
